cloudformation/base.json
{
    "AWSTemplateFormatVersion": "2010-09-09",
    "Mappings": {
        "SSHBastionAMI": {
            "us-west-2": {
                "64": "ami-4836a428"
            }
        },
        "RDPBastionAMI": {
            "us-west-2": {
                "64": "ami-c2c3a2a2"
            }
        }
    },
    "Parameters": {
        "KeyPair": {
            "Description": "Amazon EC2 Key Pair Name",
            "Type": "AWS::EC2::KeyPair::KeyName"
        },
        "Owner": {
            "Description": "Owner of this stack",
            "Type": "String"
        }
    },
    "Resources": {
        "VPC": {
            "Type": "AWS::EC2::VPC",
            "Properties": {
                "CidrBlock": "10.0.0.0/16",
                "EnableDnsSupport": "true",
                "EnableDnsHostnames": "true",
                "InstanceTenancy": "default",
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "Dev"
                    },
                    {
                        "Key": "Owner",
                        "Value": {
                            "Ref": "Owner"
                        }
                    },
                    {
                        "Key": "Env",
                        "Value": "CLOUD_DEV"
                    }
                ]
            }
        },
        "PublicSubnet": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "VpcId": {
                    "Ref": "VPC"
                },
                "CidrBlock": "10.0.254.0/24",
                "AvailabilityZone": "us-west-2a",
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "PublicSubnet"
                    },
                    {
                        "Key": "Owner",
                        "Value": {
                            "Ref": "Owner"
                        }
                    }
                ]
            }
        },
        "PrivateSubnet": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "VpcId": {
                    "Ref": "VPC"
                },
                "CidrBlock": "10.0.0.0/24",
                "AvailabilityZone": "us-west-2a",
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "PrivateSubnet"
                    },
                    {
                        "Key": "Owner",
                        "Value": {
                            "Ref": "Owner"
                        }
                    }
                ]
            }
        },
        "IGW": {
            "Type": "AWS::EC2::InternetGateway",
            "Properties": {
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "IGW"
                    },
                    {
                        "Key": "Owner",
                        "Value": {
                            "Ref": "Owner"
                        }
                    }
                ]
            }
        },
        "VPCGatewayAttach": {
            "Type": "AWS::EC2::VPCGatewayAttachment",
            "Properties": {
                "InternetGatewayId": {
                    "Ref": "IGW"
                },
                "VpcId": {
                    "Ref": "VPC"
                }
            }
        },
        "DMZRouteTable": {
            "Type": "AWS::EC2::RouteTable",
            "Properties": {
                "VpcId": {
                    "Ref": "VPC"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "DMZRouteTable"
                    },
                    {
                        "Key": "Owner",
                        "Value": {
                            "Ref": "Owner"
                        }
                    }
                ]
            }
        },
        "DMZRoute": {
            "Type": "AWS::EC2::Route",
            "Properties": {
                "RouteTableId": {
                    "Ref": "DMZRouteTable"
                },
                "DestinationCidrBlock": "0.0.0.0/0",
                "GatewayId": {
                    "Ref": "IGW"
                }
            }
        },
        "DMZSubnetRouteTableAssociation": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
                "SubnetId": {
                    "Ref": "PublicSubnet"
                },
                "RouteTableId": {
                    "Ref": "DMZRouteTable"
                }
            }
        },
        "NATGateway": {
            "Type": "AWS::EC2::NatGateway",
            "Properties":{
                "SubnetId":{
                    "Ref": "PublicSubnet"
                },
                "AllocationId": {
                    "Fn::GetAtt": [
                        "NATGatewayEIP",
                        "AllocationId"
                    ]
                }
            }
        },
        "NATGatewayEIP": {
            "Type" : "AWS::EC2::EIP",
            "Properties": {
                "Domain": {
                    "Ref": "VPC"
                }
            },
            "DependsOn": "VPCGatewayAttach"
        },
        "PrivateRouteTable": {
            "Type": "AWS::EC2::RouteTable",
            "Properties": {
                "VpcId": {
                    "Ref": "VPC"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "PrivateRouteTable"
                    },
                    {
                        "Key": "Owner",
                        "Value": {
                            "Ref": "Owner"
                        }
                    }
                ]
            }
        },
        "PrivateRoute": {
            "Type": "AWS::EC2::Route",
            "Properties": {
                "RouteTableId": {
                    "Ref": "PrivateRouteTable"
                },
                "DestinationCidrBlock": "0.0.0.0/0",
                "NatGatewayId": {
                    "Ref": "NATGateway"
                }
            }
        },
        "PrivateSubnetRouteTableAssociation": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
                "SubnetId": {
                    "Ref": "PrivateSubnet"
                },
                "RouteTableId": {
                    "Ref": "PrivateRouteTable"
                }
            }
        },
        "RemoteAccessSG": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "GroupDescription": "IPs of  support folks",
                "VpcId": {
                    "Ref": "VPC"
                },
                "SecurityGroupIngress": [
                    {
                        "IpProtocol": "tcp",
                        "FromPort": "22",
                        "ToPort": "22",
                        "CidrIp": "138.68.14.230/32"
                    }
                ]
            }
        },
        "InternalOnlySG": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "GroupDescription": "Allow traffic from web hosts",
                "VpcId": {
                    "Ref": "VPC"
                },
                "SecurityGroupIngress": [
                    {
                        "IpProtocol": "tcp",
                        "FromPort": "22",
                        "ToPort": "22",
                        "SourceSecurityGroupId": {
                            "Ref": "RemoteAccessSG"
                        }
                    },
                    {
                        "IpProtocol": "tcp",
                        "FromPort": "80",
                        "ToPort": "80",
                        "SourceSecurityGroupId": {
                            "Ref": "RemoteAccessSG"
                        }
                    }
                ]
            }
        },
        "SSHBastion": {
            "Type": "AWS::EC2::Instance",
            "Properties": {
                "ImageId": {
                    "Fn::FindInMap": [
                        "SSHBastionAMI",
                        {
                            "Ref": "AWS::Region"
                        },
                        "64"
                    ]
                },
                "InstanceType": "t2.micro",
                "KeyName": {
                    "Ref": "KeyPair"
                },
                "NetworkInterfaces": [
                    {
                        "AssociatePublicIpAddress": true,
                        "DeleteOnTermination": true,
                        "DeviceIndex": "0",
                        "SubnetId": {"Ref": "PublicSubnet"},
                        "GroupSet": [
                            {
                                "Ref": "RemoteAccessSG"
                            }
                        ]
                    }
                ],
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "SSHBastion"
                    },
                    {
                        "Key": "Owner",
                        "Value": {
                            "Ref": "Owner"
                        }
                    }
                ],
                "UserData": {
                    "Fn::Base64": {
                        "Fn::Join": [
                            "",
                            [
                                "#!/bin/bash -xe\n",
                                "curl https://s3.amazonaws.com//aws-cloudwatch/downloads/latest/awslogs-agent-setup.py -O\n","chmod +x ./awslogs-agent-setup.py\n",
                                "./awslogs-agent-setup.py -n -r us-east-1 -c s3://myawsbucket/my-config-file\n"
                            ]
                        ]
                    }
                }
            },
            "DependsOn": "VPCGatewayAttach"
        }
    },
    "Outputs": {
        "VPC":{
            "Description": " VPC Id",
            "Value": {
                "Ref":"VPC"
            }
        },
        "PublicSubnet":{
            "Description": " Public Subnet Id",
            "Value": {
                "Ref":"PublicSubnet"
            }
        },
        "PrivateSubnet":{
            "Description": " Private Subnet Id",
            "Value": {
                "Ref":"PrivateSubnet"
            }
        },
        "SSHBastionIP":{
            "Description": " SSH Bastion IP",
            "Value": {
                "Fn::GetAtt":[
                    "SSHBastion",
                    "PublicIp"
                ]
            }
        }
    }
}
